# local-code-ide

./: $null  .gitignore  AGENTS.md  CMakeLists.txt  README.md  TEST_PLAN.md  build_log.txt  debug-run.bat  dev.bat  dev.sh  full_build_log.txt  material-icons-api.json  pytest.ini  requirements-test.txt  run.bat  run.sh  run_tests.py  setup.py  vcpkg.json  version.py
.github/workflows/: ci-cd.yml
build-ci-verify/: ALL_BUILD.vcxproj  LocalCodeIDE.slnx  LocalCodeIDE.vcxproj  LocalCodeIDE.vcxproj.filters  LocalCodeIDE_autogen.vcxproj  LocalCodeIDE_autogen.vcxproj.filters  LocalCodeIDE_automoc_json_extraction.vcxproj  LocalCodeIDE_automoc_json_extraction.vcxproj.filters  LocalCodeIDE_qmlimportscan.vcxproj  LocalCodeIDE_qmlimportscan.vcxproj.filters  LocalCodeIDE_qmllint.vcxproj  LocalCodeIDE_qmllint.vcxproj.filters  LocalCodeIDE_qmllint_json.vcxproj  LocalCodeIDE_qmllint_json.vcxproj.filters  LocalCodeIDE_qmllint_module.vcxproj  LocalCodeIDE_qmllint_module.vcxproj.filters  LocalCodeIDE_qmltyperegistration.vcxproj  LocalCodeIDE_qmltyperegistration.vcxproj.filters  LocalCodeIDE_tooling.vcxproj  LocalCodeIDE_tooling.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  all_aotstats.vcxproj  all_aotstats.vcxproj.filters  all_qmllint.vcxproj  all_qmllint.vcxproj.filters  all_qmllint_json.vcxproj  all_qmllint_json.vcxproj.filters  all_qmllint_module.vcxproj  all_qmllint_module.vcxproj.filters  all_qmltyperegistrations.vcxproj  all_qmltyperegistrations.vcxproj.filters  module_LocalCodeIDE_aotstats_targets.vcxproj  module_LocalCodeIDE_aotstats_targets.vcxproj.filters
build-ci-verify/.qt/qml_imports/: LocalCodeIDE_build.rsp  LocalCodeIDE_conf.rsp
build-ci-verify/LocalCodeIDE/: qmldir
build-ci-verify/LocalCodeIDE/qml/: Main.qml
build-ci-verify/qmltypes/: LocalCodeIDE_foreign_types.txt
installer/: Product.wxs  README.md  Version.wxi  build-installer.ps1
language-packs/linux/clangd/: clangd.sh
language-packs/linux/cmake-language-server/: cmake-language-server.sh
language-packs/linux/json-language-server/: json-language-server.sh
language-packs/linux/marksman/: marksman.sh
language-packs/linux/powershell-editor-services/: powershell-editor-services.sh
language-packs/linux/pyright/: pyright-langserver.sh
language-packs/linux/qmlls/: qmlls.sh
language-packs/linux/rust-analyzer/: rust-analyzer.sh
language-packs/linux/taplo/: taplo.sh
language-packs/linux/typescript-language-server/: typescript-language-server.sh
language-packs/linux/yaml-language-server/: yaml-language-server.sh
language-packs/windows/clangd/: clangd.cmd
language-packs/windows/cmake-language-server/: cmake-language-server.cmd
language-packs/windows/json-language-server/: json-language-server.cmd
language-packs/windows/marksman/: marksman.cmd
language-packs/windows/powershell-editor-services/: powershell-editor-services.cmd
language-packs/windows/pyright/: pyright-langserver.cmd
language-packs/windows/qmlls/: qmlls.cmd
language-packs/windows/rust-analyzer/: rust-analyzer.cmd
language-packs/windows/taplo/: taplo.cmd
language-packs/windows/typescript-language-server/: typescript-language-server.cmd
language-packs/windows/yaml-language-server/: yaml-language-server.cmd
qml/: Main.qml  WorkbenchTheme.qml
qml/assets/icons/: LICENSE.txt
qml/components/: AssistantTab.qml  BottomPanel.qml  ChatPanel.qml  CommandPaletteDialog.qml  EditorPane.qml  ExplorerPanel.qml  ExplorerRootRow.qml  ExplorerToolbarButton.qml  ExplorerTreeRow.qml  IconButton.qml  IconRegistry.js  LeftPanel.qml  ModelHubPanel.qml  QuickOpenDialog.qml  ScmChangeRow.qml  ScmCommitSection.qml  ScmHeader.qml  ScmHistorySection.qml  ScmSectionHeader.qml  SearchPanel.qml  Sidebar.qml  SourceControlPanel.qml  StatusBar.qml
qml/components/assistant/: AssistantApprovalsSection.qml  AssistantContextSection.qml  AssistantInputSection.qml  AssistantOutputSection.qml  AssistantRuntimeSection.qml
qml/components/modelhub/: ModelHubActivateServerStep.qml  ModelHubDiscoverStep.qml  ModelHubDownloadStep.qml
resources/language-packs/: checksums.lock.json  manifest.json
scripts/: build-appimage.sh  capture-localcodeide-screenshot.ps1  copy-language-packs-with-progress.bat  copy-language-packs-with-progress.ps1  fetch-language-packs.py  validate-language-packs.py
src/: app_icon.rc  main.cpp
src/adapters/ai/: AdaptiveAiBackend.cpp  AdaptiveAiBackend.hpp  LlamaCppServerBackend.cpp  LlamaCppServerBackend.hpp  MockAiBackend.cpp  MockAiBackend.hpp
src/adapters/codeintel/: LanguageServerCodeIntelProvider.cpp  LanguageServerCodeIntelProvider.hpp  LspCodeIntelProvider.cpp  LspCodeIntelProvider.hpp  MockCodeIntelProvider.cpp  MockCodeIntelProvider.hpp
src/adapters/diagnostics/: HybridDiagnosticProvider.cpp  HybridDiagnosticProvider.hpp  LocalSyntaxDiagnosticProvider.cpp  LocalSyntaxDiagnosticProvider.hpp  LspClient.cpp  LspClient.hpp  LspDiagnosticProvider.cpp  LspDiagnosticProvider.hpp  LspDocumentManager.cpp  LspProtocol.cpp  (+8 more)
src/core/: Document.cpp  Document.hpp
src/services/: AiRequestBuilder.cpp  AiRequestBuilder.hpp  AiService.cpp  AiService.hpp  CodeIntelService.cpp  CodeIntelService.hpp  DiagnosticCoordinator.cpp  DiagnosticCoordinator.hpp  DiagnosticService.cpp  DiagnosticService.hpp  DiffApplyService.cpp  DiffApplyService.hpp  DocumentService.cpp  DocumentService.hpp  GitService.cpp  GitService.hpp  HardwareProfileService.cpp  HardwareProfileService.hpp  LanguagePackService.cpp  LanguagePackService.hpp  LanguageServerHub.cpp  LanguageServerHub.hpp  LlamaServerProcessService.cpp  LlamaServerProcessService.hpp  LocalModelRuntimeService.cpp  LocalModelRuntimeService.hpp  ModelCatalogService.cpp  ModelCatalogService.hpp  SearchService.cpp  SearchService.hpp  TerminalService.cpp  TerminalService.hpp  ToolCallCoordinator.cpp  ToolCallCoordinator.hpp  ToolCallingService.cpp  ToolCallingService.hpp  WorkspaceContextService.cpp  WorkspaceContextService.hpp  WorkspaceService.cpp  WorkspaceService.hpp
tests/: README.md  __init__.py  conftest.py  test_inference.py  test_integration.py  test_server.py  test_tools.py
(+118 files in other folders)
